# d3d12book

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  PixelShader.cso  README.md  VertexShader.cso
Core/: CMakeLists.txt
Core/inc/: Application.h  AtmosphericScatteringSkyDoom.h  AtmosphericScatteringSkybox.h  BitmapClouds.h  BoundingVolumesPrimitive.h  Buffer.h  ByteAddressBuffer.h  Camera.h  CommandList.h  CommandQueue.h  ComputePerformanceTest.h  ConstantBuffer.h  DX12LibPCH.h  DebugDepthBufferRenderPass.h  DefferedRenderPass.h  DepthBuffer.h  DepthBufferRenderPass.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  DynamicDescriptorHeap.h  EnvironmentMapRenderPass.h  Events.h  ForwardPlusRenderPass.h  Frustum.h  FrustumCullRenderPass.h  GUI.h  Game.h  GenerateMipsPSO.h  GeometryPrimitive.h  GridViewFrustums.h  Helpers.h  HighResolutionClock.h  IndexBuffer.h  Light.h  LightCulling.h  LightsToView.h  Material.h  Mesh.h  OcclusionCullRenderPass.h  (+28 more)
Core/inc/config_sys/: Config.h  XPath.h  tinyxml2.h
Core/shaders/: AtmosphericScatteringInclude.hlsl  AtmosphericScatteringSkyDoom_PS.hlsl  AtmosphericScatteringSkybox_PS.hlsl  BitmapClouds_PS.hlsl  BitmapClouds_VS.hlsl  CommonInclude.hlsl  DebugDepthBuffer_PS.hlsl  DebugDepthBuffer_VS.hlsl  DefferedPass_PS.hlsl  DefferedPass_VS.hlsl  DepthBuffer_PS.hlsl  DepthBuffer_VS.hlsl  ForwardPlus_PS.hlsl  ForwardPlus_VS.hlsl  GenerateMips_CS.hlsl  GridViewFrustums_CS.hlsl  LightCulling_CS.hlsl  LightsToView_CS.hlsl  PerturbedClouds_PS.hlsl  PrecomputeAtmosphericScatteringSkybox_CS.hlsl  PrecomputeParticleDensityForAtmScat_PS.hlsl  QuadTC_VS.hlsl  Quad_PS.hlsl  Quad_VS.hlsl  SkyDoomGradient_PS.hlsl  Sum_CS.hlsl  VolumetricClouds_PS.hlsl  VoxelGridDebug_PS.hlsl  VoxelGridFill_GS.hlsl  VoxelGridFill_PS.hlsl  VoxelGridFill_VS.hlsl
Core/src/: Application.cpp  AtmosphericScatteringSkyDoom.cpp  AtmosphericScatteringSkybox.cpp  BitmapClouds.cpp  Buffer.cpp  ByteAddressBuffer.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  ComputePerformanceTest.cpp  ConstantBuffer.cpp  DebugDepthBufferRenderPass.cpp  DefferedRenderPass.cpp  DepthBuffer.cpp  DepthBufferRenderPass.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  DynamicDescriptorHeap.cpp  EnvironmentMapRenderPass.cpp  ForwardPlusRenderPass.cpp  Frustum.cpp  FrustumCullRenderPass.cpp  GUI.cpp  Game.cpp  GenerateMipsPSO.cpp  GridViewFrustums.cpp  HighResolutionClock.cpp  IndexBuffer.cpp  LightCulling.cpp  LightsToView.cpp  Material.cpp  Mesh.cpp  OcclusionCullRenderPass.cpp  PanoToCubemapPSO.cpp  PerturbedClouds.cpp  PrecomputeParticleDensityForAtmScat.cpp  PrecomputeSkyboxLUTForAtmScat.cpp  QuadRenderPass.cpp  QuadTree.cpp  (+18 more)
Core/src/config_sys/: Config.cpp  XPath.cpp  tinyxml2.cpp
DefferedRenderDemo/: CMakeLists.txt  README.md  main.cpp
DefferedRenderDemo/inc/: DefferedRenderDemo.h
DefferedRenderDemo/shaders/: ForwardVS.hlsl
DefferedRenderDemo/src/: DefferedRenderDemo.cpp
DirectXTex/: CMakeLists.txt
ForwardPlusDemo/: CMakeLists.txt  main.cpp
ForwardPlusDemo/assets/: crytek-sponza.xml
ForwardPlusDemo/inc/: ForwardPlusDemo.h  ForwardPlusDemoUtils.h  Light.h
ForwardPlusDemo/src/: ForwardPlusDemo.cpp
Lesson1_cube3D/: CMakeLists.txt  main.cpp
Lesson1_cube3D/inc/: Lesson1_cube3d.h
Lesson1_cube3D/src/: Lesson1_cube3d.cpp
Lesson2_forward_shading/: CMakeLists.txt  main.cpp
Lesson2_forward_shading/inc/: Lesson2_forward_shading.h
Lesson2_forward_shading/shaders/: ForwardPS.hlsl  ForwardVS.hlsl  VertexShader.hlsl
Lesson2_forward_shading/src/: Lesson2_forward_shading.cpp
StencilDemo/: CMakeLists.txt  main.cpp
StencilDemo/inc/: StencilDemo.h  StencilDemoUtils.h
StencilDemo/shaders/: ForwardPS.hlsl  ForwardVS.hlsl  PixelShader.hlsl  ScreenQuadPS.hlsl
StencilDemo/src/: StencilDemo.cpp
Terrain_Project/: CMakeLists.txt  main.cpp
Terrain_Project/inc/: CameraEuler.h  Terrain_Project.h
Terrain_Project/shaders/: ForwardPS.hlsl  SkyboxVS.hlsl
Terrain_Project/src/: CameraEuler.cpp  Terrain_Project.cpp
VoxelGIDemo/: CMakeLists.txt  main.cpp
VoxelGIDemo/inc/: StringConstant.h  VoxelGIDemo.h  VoxelGIDemoUtils.h
VoxelGIDemo/shaders/: ForwardPS.hlsl  ScreenQuadPS.hlsl
VoxelGIDemo/src/: VoxelGIDemo.cpp
